[package]
name        = "ntstatus"
description = "NTSTATUS bindings for Rust"
version     = "0.1.1"
authors     = ["Kento Oki <hrn832@protonmail.com>"]
repository  = "https://github.com/kkent030315/ntstatus"
keywords    = ["windows", "ntstatus", "ntapi", "winapi"]
license     = "Apache-2.0"
edition     = "2021"
readme      = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.7.0"
